# cardiorespiratory-sound-diagnosis

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  repo-link.txt  repo_link.txt  requirements.txt
data/processed/: lung_cycles.csv  manifest.csv
params/: heart.yaml  lung.yaml
report/: build_antiplagiat_docx.py  gost-r-7-0-5-2008-numeric.csl  helpers.typ  main.typ  refs.bib
report/sections/: 00-abstract.typ  01-introduction.typ  02-ch1-litreview.typ  03-ch2-methods.typ  (+5 more)
scripts/: aggregate_cross_modal.py  arterial_synthetic_poc.py  build_circor.py  build_features.py  build_manifest.py  build_spectrograms.py  download_heart.py  download_lung.py  expand_classifiers.py  fetch_icbhi_split.py  finish_phase4.py  make_splits.py  mcnemar_classical.py  mcnemar_vs_deep.py  render_cm_heatmap.py  run_ast.py  run_ast_multiseed.py  run_circor.py  run_classical.py  run_cnn.py  run_cross_modal.py  run_cross_modal_multiseed.py  run_eda.py  run_hpo.py  run_multiseed.py
src/: ast_model.py  cnn.py  config.py  config_loader.py  cross_modal.py  datasets.py  eda.py  features.py  ingest.py  metrics.py  preprocess.py  segment.py  spectrograms.py  split.py  train_classical.py  train_cnn.py
tests/: conftest.py  test_ast.py  test_cnn.py  test_config_fixed.py  test_cross_modal.py  test_data_integrity.py  test_datasets.py  test_determinism.py  test_eda.py  test_environment.py  test_features.py  test_manifest.py  test_metrics.py  test_preprocess.py  test_run_cnn.py  test_scaffold.py  test_spectrograms.py  test_splits.py  test_train_classical.py  test_train_cnn_smoke.py
(+31 files in other folders)
